Fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,600&display=swap');
 
+/* *{
+    border: 1px solid red;
+} */
+
 body, html{
     margin: 0;
-    overflow: hidden;
+    width: 100vw; 
+    overflow-x: hidden;
+    
 }
+
 #background-video{
+    /* width: auto;
+    height: 100%;
+    object-fit: cover; */
     width: 100vw;
     height: 100vh;
     object-fit: cover;
@@ -16,6 +26,12 @@ body, html{
     z-index: -1;
 }
 
+/* 
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+*/
+
 #spotlight{
     width: 500px;
     height: 500px;
@@ -24,7 +40,7 @@ body, html{
     /*box-shadow: -56px 57px 100px -3px rgba(255, 255, 255, 0.247); */
     margin: 0 auto;
     z-index: 2;
-    position: absolute;
+    position: fixed;
     left: 0; 
     right: 0;
     top: -450px; 
@@ -46,14 +62,14 @@ body, html{
     & h2{
         color: white;
         font-family: 'Montserrat', sans-serif;
-        font-size: clamp(50px, 4vw, 70px);
+        font-size: clamp(35px, 4vw, 70px);
         margin: 15px 0;
     }
 }
 
 
 #logoCers{
-    width: 250px;
+    width: 200px;
     height: auto;
 }
 
@@ -81,20 +97,24 @@ body, html{
 #footer{
     color: white;
     font-family: 'Montserrat', sans-serif;
-    position: fixed; 
+    position: absolute; 
     left: 0; 
     right: 0;
-    bottom: 0; 
+    bottom: 5px; 
     margin-left: auto; 
     margin-right: auto; 
-    margin-bottom: 15px;
+    /* margin-bottom: 10px; */
     width: 200px; /* Need a specific value to work */
+    text-align: center;
 }
 
 @media (max-width: 750px) {
     #background-video { display: none; }
     body {
+        max-width: 100dvw;
+        max-height: 100dvh;
       background: url("./assets/backupBackground.avif") no-repeat;
       background-size: cover;
     }
 }
+ 
